# Farm_Uchot

./: README.md  postgres.sh  pyproject.toml
migrations/: env.py
migrations/versions/: 10c68b0c8fe4_initial_revision.py
src/: config.py  const.py  container.py  main.py  schemas.py
src/container/: container.py
src/conts/: const.py
src/db/: session.py
src/models/: livestock.py
src/routing/: router.py
src/schemas/: schemas.py
src/service/: serv.py
